--- a/app/src/main/res/layout/activity_add_event.xml
+++ b/app/src/main/res/layout/activity_add_event.xml
@@ -17,15 +17,24 @@
 
 
         <ImageView
+            android:id="@+id/arrow2"
+            android:layout_width="40dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="30dp"
+            android:elevation="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/testoCentrato"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/testoCentrato"
+            app:srcCompat="@drawable/arrow" />
+
+        <ImageView
             android:id="@+id/imageView6"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="30dp"
             android:src="@drawable/check"
             app:layout_constraintBottom_toBottomOf="@+id/testoCentrato"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.669"
-            app:layout_constraintStart_toEndOf="@+id/testoCentrato"
             app:layout_constraintTop_toTopOf="@+id/testoCentrato" />
 
         <TextView
