--- a/app/src/main/res/layout/activity_search_event_list.xml
+++ b/app/src/main/res/layout/activity_search_event_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,62 +7,118 @@
     android:orientation="vertical"
     tools:context=".activities.SearchEventList">
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchView2"
-        android:layout_width="388dp"
+
+
+    <ImageView
+        android:id="@+id/imageView8"
+        android:layout_width="414dp"
+        android:layout_height="197dp"
+        android:backgroundTint="@color/white"
+        android:scaleType="fitXY"
+        android:src="@drawable/header"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:elevation="2dp"/>
+
+    <!-- VERIFICARE  FUNZIONAMENTO, Non fa inserire testo  -->
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/searchCard"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:queryHint="Cerca..."
-        app:iconifiedByDefault="false" />
+        app:cardCornerRadius="50dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView8"
+        app:layout_constraintVertical_bias="0.36"
+        android:elevation="2dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView2"
+            android:layout_width="345dp"
+            android:layout_height="44dp"
+            android:background="@color/white"
+            app:iconifiedByDefault="false" />
+    </androidx.cardview.widget.CardView>
+    <Button
+        android:id="@+id/bottoneFiltri"
+        android:layout_width="83dp"
+        android:layout_height="33dp"
+        android:backgroundTint="@color/green"
+        android:text="Applica\nfiltri"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/cardView9"
+        app:layout_constraintEnd_toEndOf="@+id/searchCard"
+        app:layout_constraintTop_toTopOf="@+id/cardView9"
+        android:elevation="3dp"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView8"
+        android:layout_width="104dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="10dp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintStart_toStartOf="@+id/searchCard"
+        app:layout_constraintTop_toBottomOf="@+id/searchCard"
+        android:elevation="2dp">
 
-        <Spinner
-            android:id="@+id/filtro_categoria"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:minHeight="48dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <AutoCompleteTextView
-            android:id="@+id/filtro_luogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:completionThreshold="1"
-            android:hint="Comune"
-            android:minHeight="48dp"
-            android:required="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.164"
-            app:layout_constraintStart_toEndOf="@+id/filtro_categoria"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            <Spinner
+                android:id="@+id/filtro_categoria"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:minHeight="48dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/bottoneFiltri"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Applica\nfiltri"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/filtro_luogo"
-            app:layout_constraintTop_toTopOf="parent"
-            />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView9"
+        android:layout_width="141dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:elevation="30dp"
+        app:cardCornerRadius="20dp"
+        app:layout_constraintStart_toEndOf="@+id/cardView8"
+        app:layout_constraintTop_toBottomOf="@+id/searchCard">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <AutoCompleteTextView
+                android:id="@+id/filtro_luogo"
+                android:layout_width="138dp"
+                android:layout_height="38dp"
+                android:layout_gravity="center_vertical"
+                android:completionThreshold="1"
+                android:hint="Comune"
+                android:required="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 
     <ListView
         android:id="@+id/searchList"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"/>
+        android:layout_width="410dp"
+        android:layout_height="693dp"
+        android:layout_marginTop="-26dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView8"
+        app:layout_constraintVertical_bias="0.0"
+        android:elevation="1dp"/>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
