--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -62,7 +62,8 @@
                 android:layout_height="wrap_content"
                 android:text="Vieni anche tu alla festa bella bella figa"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+                android:maxLines="2"/>
 
 
 
@@ -93,7 +94,8 @@
                         <ImageView
                             android:layout_width="20dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/p_1" />
+                            android:src="@drawable/calendar_mark_svgrepo_com"
+                            android:layout_marginEnd="10dp"/>
 
                         <TextView
                             android:id="@+id/eventDate"
@@ -115,7 +117,8 @@
                         <ImageView
                             android:layout_width="20dp"
                             android:layout_height="30dp"
-                            android:src="@drawable/p_1" />
+                            android:src="@drawable/clock_circle_svgrepo_com"
+                            android:layout_marginEnd="10dp"/>
 
                         <TextView
                             android:id="@+id/eventHour"
@@ -224,7 +227,7 @@
                 android:elevation="20dp"
                 android:padding="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/imageView2"
+                app:layout_constraintStart_toStartOf="@+id/imageProfileOrganizzatore"
                 app:layout_constraintTop_toBottomOf="@+id/imageProfileOrganizzatore"
                 app:srcCompat="@drawable/heart_animation" />
 
